# fastapi-control

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.mdx  docs.json  pyproject.toml
example/: main.py
fastapi_control/: __init__.py  controller.py  di.py
